src/scss/chorus.framework.scss
//core
//-----------------------------
$display-width: 1250;

.chorus-standard-font {
  font-family: $font-open-sans-condensed;
  font-weight: $font-weight-medium;
  text-transform: capitalize;
}

.chorus-search-button {
  display: inline-block;
  margin: 10px 0;
  padding: 10px;
  border: 1px solid black;
  cursor: pointer;
  @include unselectable;
  @extend .chorus-standard-font;
}


//containers
//-----------------------------
.chorus-instrument {
  * {
    @extend .chorus-standard-font;
  }
}

.chorus-string-container {
  width: 100%;
  max-width: 100%;
  overflow-x: scroll;
  margin: 10px 0;
  position: relative;
}

.results-container {
  max-height: 250px;
  max-width: 100%;
  overflow-y: scroll;
  cursor: pointer;
  ul {
    margin: 0;
    padding: 0;
    list-style: none;
    overflow: hidden;
  }
  li {
    padding: 5px;
    border-top: 1px solid black;
    @include unselectable;
    @include raw-transition(unquote("background-color 500ms ease-out 0s,color 500ms ease-out 0s"));
    &:last-child {
      border-bottom: 1px solid black;
    }
    &:hover, &.chorus-result-item-selected {
      background-color: black;
      color: white;
    }
  }
  span {
    @extend .chorus-standard-font;
    &.chorus-result-letters {
      float: right;
    }
  }
}


//strings
//-----------------------------
.chorus-string {
  width: 100%;
  min-width: $display-width+px;
  clear: both;
  overflow: hidden;
  &:nth-child(2){
    border-top: 1px solid black;
  }
  &:last-child{
    border-bottom: 1px solid black;
  }
}

.chorus-fret-marker {
  position: absolute;
  top: 0;
  bottom: 0;
  margin: auto;
  height: 30px;
  .chorus-fret {
    vertical-align: middle;
    border-right-color: transparent;
  }
  p {
    font-size: 20px;
    font-weight: bold;
    line-height: 20px;
    &:before {
      border: none;
    }
  }
}

.chorus-fret {
  display: inline-block;
  font-size: 16px;
  width: 7.5%;
  text-align: center;
  cursor: pointer;
  position: relative;
  border-right: 1px solid black;
  float: left;
  @include unselectable;
  &:first-child{
    border-right: 5px solid black;
  }
  &:not(:first-child){
    p {
      //http://codepen.io/ericrasch/pen/Irlpm
      position: relative;
      z-index: 1;
      &:before {
        border-top: 2px solid #dfdfdf;
        content: "";
        margin: 0 auto; /* this centers the line to the full width specified */
        position: absolute; /* positioning must be absolute here, and relative positioning must be applied to the parent */
        top: 50%; left: 0; right: 0; bottom: 0;
        width: 95%;
        z-index: -1;
      }
      span {
        background-color: white;
        /* to hide the lines from behind the text, you have to set the background color the same as the container */
        padding: 0 5px;
      }
    }
  }
  p {
    @extend .chorus-note;
    span {
      white-space: nowrap;
    }
  }
}


//piano
//-----------------------------
.chorus-piano-keyboard {
  position: relative;
  height: 500px;
  max-width: 100%;
}

.chorus-piano-key {
  $whiteKeyWidth: 14.15;
  $blackKeyWidth: $whiteKeyWidth*0.6;
  display: inline-block;
  font-size: 16px;
  margin: 0;
  text-align: center;
  cursor: pointer;
  @include unselectable;
  &.white {
    position: relative;
    color: black;
    background: white;
    height: 95.5%;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
    border-right: 1px solid black;
    width: 14.15%;
    vertical-align: bottom;
    float: left;
    &:first-child {
      border-left: 1px solid black;
    }
  }
  &.black {
    position: absolute;
    top: 0;
    height: 65%;
    margin-left: unquote('-'+$blackKeyWidth/2+'%');
    width: unquote($blackKeyWidth+'%');
    background: black;
    span {
      color: white;
    }
    z-index: 1000;
    &[data-chorus-tone="4"] {
      left: unquote($whiteKeyWidth*1+'%');
    }
    &[data-chorus-tone="6"] {
      left: unquote($whiteKeyWidth*2+'%');
    }
    &[data-chorus-tone="9"] {
      left: unquote($whiteKeyWidth*4+'%');
    }
    &[data-chorus-tone="11"] {
      left: unquote($whiteKeyWidth*5+'%');
    }
    &[data-chorus-tone="1"] {
      left: unquote($whiteKeyWidth*6+'%');
    }
  }
  p {
    position: absolute;
    bottom: 10%;
    left: 0;
    right: 0;
    width: 50px;
    max-width: 100%;
    display: inline-block;
    @extend .chorus-note;
  }
}


//notes
//-----------------------------
.chorus-note {
  text-align: center;
  padding: 5px 0;
  margin: 0 auto;
  span {
    padding: 5px 0;
    border-radius: 15%;
    width: 55px;
    display: inline-block;
    max-width: 100%;
    @include raw-transition(unquote("background-color 500ms ease-out 0s,color 500ms ease-out 0s"));
  }
}

.chorus-note-found {
  span {
    background-color: $color-badgers-gold!important;
  }

  &:not(.chorus-note-selected):not(.chorus-note-root) {
    &.chorus-note-multicolor-0 {
      //A
      span {
        background-color: $color-note-0!important;
      }
    }

    &.chorus-note-multicolor-1 {
      //A# Bb
      span {
        background-color: $color-note-1!important;
      }
    }

    &.chorus-note-multicolor-2 {
      //B
      span {
        background-color: $color-note-2!important;
      }
    }

    &.chorus-note-multicolor-3 {
      //C
      span {
        background-color: $color-note-3!important;
      }
    }

    &.chorus-note-multicolor-4 {
      //C# Db
      span {
        background-color: $color-note-4!important;
      }
    }

    &.chorus-note-multicolor-5 {
      //D
      span {
        background-color: $color-note-5!important;
      }
    }

    &.chorus-note-multicolor-6 {
      //D# Eb
      span {
        background-color: $color-note-6!important;
      }
    }

    &.chorus-note-multicolor-7 {
      //E
      span {
        background-color: $color-note-7!important;
      }
    }

    &.chorus-note-multicolor-8 {
      //F
      span {
        background-color: $color-note-8!important;
      }
    }

    &.chorus-note-multicolor-9 {
      //F# Gb
      span {
        background-color: $color-note-9!important;
      }
    }

    &.chorus-note-multicolor-10 {
      //G
      span {
        background-color: $color-note-10!important;
      }
    }

    &.chorus-note-multicolor-11 {
      //G# Ab
      span {
        background-color: $color-note-11!important;
      }
    }
  }
}

.chorus-note-selected {
  span {
    color: white;
    background-color: $color-jays-light-blue!important;
  }
}

.chorus-note-root{
  span {
    color: white;
    background-color: $color-badgers-red!important;
  }
}

